[project]
name = "arxiv-today-mcp"
version = "0.1.0"
description = "MCP server for browsing and searching arXiv papers by category"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["arxiv", "mcp", "llm", "research", "papers"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "arxiv>=2.0,<3.0",
    "appdirs>=1.4",
]

[project.scripts]
arxiv-today-mcp = "arxiv_mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/humarobot/arxiv-today-mcp"

[tool.uv.build-backend]
module-name = "arxiv_mcp_server"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
